...
    
    private func showNextQuestionOrResults() {
        self.viewController?.blockButton(isBlocked: false)
        if isLastQuestion() {
            statisticService?.store(correct: correctAnswers, total: questionsAmount)
            let alertModel = AlertModel(
                title: "Этот раунд окончен!",
                message: createMessage(),
                buttonText: "Сыграть еще раз") { [weak self] _ in
                    guard let self else { return }
                    self.switchToNextQuestion()
                    self.resetQuestionIndex()
                    self.questionFactory?.requestNextQuestion()
...
